[package]
name = "rusty_chat_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
unicode-width = "0.1.9"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
